tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/double-sign-plus.stderr
TOML parse error at line 1, column 21
  |
1 | double-sign-plus = ++99
  |                     ^
invalid integer
